# EnJin

./: .gitignore  CLAUDE.md  ENJIN_CONSTITUTION.md  ENJIN_ROADMAP.md  LICENSE  README.md  pyproject.toml
docs/01_language_spec/: annotations_registry.md  error_model.md  expect_assertion_grammar.md  guard_expression_spec.md  keywords_and_intents.md  syntax.md
docs/02_architecture/: blue_green_migration.md  compilation_unit_model.md  crawler_control_plane.md  cross_file_resolution.md  four_layer_model.md  human_ai_collaboration.md  queue_contract.md  temporal_workflow_model.md
docs/07_plugins/: extension_guide.md
examples/: application.ej  blog_platform.ej  task_manager.ej  user_management.ej
examples/plugins/enjinc-go-gin/: README.md  pyproject.toml
examples/plugins/enjinc-go-gin/src/go_gin/: __init__.py  renderer.py
examples/plugins/enjinc-go-gin/src/go_gin/templates/: config.go.jinja  go.mod.jinja  handler.go.jinja  main.go.jinja  model.go.jinja  router.go.jinja  service.go.jinja
examples/plugins/enjinc-go-gin/tests/: test_go_gin.py
tests/: __init__.py  conftest.py  test_ai_generation.py  test_analyzer.py  test_ast_audit.py  test_business_logic.py  test_cli.py  test_crash_recovery.py  test_crawler_templates.py  test_dependency_graph.py  test_e2e.py  test_enjin_lock.py  test_importer.py  test_integration.py  test_java_templates.py  test_microservice_templates.py  test_migration.py  test_parser.py  test_parser_concurrency.py  test_parser_error_recovery.py  test_parser_stress.py  test_refactor.py  test_reviewer.py  test_risk_control.py  test_stack_migrator.py  test_templates.py  test_test_generator.py
(+124 files in other folders)
